github_data_collector/src/data/issue_comment/beautiful-docs_beautiful-docs.txt
I am trying to install bfdocs from the master source.
after `npm install -g`, when i execute command `bfdocs`, i am getting following error:

```
module.js:338
    throw err;
          ^
Error: Cannot find module '../lib/command.js'
    at Function.Module._resolveFilename (module.js:336:15)
    at Function.Module._load (module.js:278:25)
    at Module.require (module.js:365:17)
    at require (module.js:384:17)
    at Object.<anonymous> (/usr/local/lib/node_modules/beautiful-docs/bin/bfdocs:2:1)
    at Module._compile (module.js:460:26)
    at Object.Module._extensions..js (module.js:478:10)
    at Module.load (module.js:355:32)
    at Function.Module._load (module.js:310:12)
    at Function.Module.runMain (module.js:501:10)
```

any idea about this problem?

My development environment just blew up because npm installed Less 2.something. Currently the `>=` prefix allows the newest major version of a dependency to be installed and according to [SemVer](http://semver.org/) major version number changes are made "when you make incompatible API changes".

Created with https://github.com/dkhamsing/frankenstein
### GitHub Corrected URLs

| Was | Now |
| --- | --- |
| https://github.com/maximebf/beautiful-docs | https://github.com/beautiful-docs/beautiful-docs |
### Other Corrected URLs

| Was | Now |
| --- | --- |
| http://softwaremaniacs.org/soft/highlight/en/ | https://highlightjs.org/ |

Line breakings were causing JS error:
`SyntaxError: unterminated string literal line ending in "`

After changing the replace pattern now it's working.

After adding image in form:

```
![image](assets/img/excel.png)
```

or

```
<img src="assets/img/excel.png" />
```

from directory:
Root
--docs
     --assets 
         ---excel.png
--out
--readme.md

is giving error:

```
An error occured while generating a manifest: Error: ENOENT, open 'E:\www\docs\assets\img\excel.png'
```

and the image file is resized into 0 kbs

Hello,

I've an issue where after heading there's alot of `<br></br>` added into code...but there's nothing like that in MD file.

<pre><code>## CSV Data Structure

</code></pre>

``` HTML
<table class="table table-condensed table-bordered">
```

and the output in HTML file is:

``` HTML
<h2 id="csv-data-structure">CSV Data Structure</h2>
<br></br>
<br></br>
<br></br>
<br></br>
<br></br>
<br></br>
<br></br>
<br></br>
<br></br>
<br></br>
<br></br>
<br></br>
<table class="table table-condensed table-bordered">
```

Any idea what could have caused that? It's not happening under every heading, but most of them. The count of br is always other. 

This fixes #47 

When typing HTML code in markdown instead of markdown text it is normally rendered but code element is not replacing < > with &lt ; and &gt ;

It would be a nice thing as enhancement - two columns  with very short code in one row are really nice thing - the only way to achieve that is manully write i.e. :

```
<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
<h5>HTML</h5>
    <pre><code class="html">

    &lt;meta name="robots" content="noindex,nofollow"/&gt;

    </code></pre>
</div>
</div>

```

Edit: 
I see that github markdown with tripple back-apostrophe is doing what I want...

```
<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
<h5>HTML</h5>
<pre>
` ` `
<meta name="robots" content="noindex,nofollow" /> 
` ` `
</pre>
</div>
```

Since this is a organization :+1: , it would cool to have a automated publishing system which can done using travis-ci, like this:
http://docs.travis-ci.com/user/deployment/npm/

This does have the following advantages:
- Easier to publish new versions.
- Publishing only if tests work.
- Organization can publish instead of the single owner of npm account.

Example configuration from another project:
https://github.com/einigeln/einigeln.js/blob/master/.travis.yml

Please, support asciidoc syntax using asciidoctor-js library 

http://asciidoctor.org/docs/install-and-use-asciidoctorjs/
